Fixed footer to bottom of the page so that content doesnt get stuck behind

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -37,3 +37,7 @@ body {
 .the-title {
   font-size: 40px;
 }
+
+.footer-main {
+  position: fixed;
+}
